2010-10-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-generic): The text nodes should be text, not :text.

	* nnir.el (nnir-search-engine): Ressurect variable, since it's used
	later in the file.

2010-10-30  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el: general clean up. allow searching with multiple
	engines. allow separate extra-parameters for each engine. batch queries
	when possible.
	(nnir-imap-default-search-key,nnir-method-default-engines): add
	customize interface.
	(nnir-run-gmane): new engine.
	(nnir-engines): use it. qualify all prompts with engine name.
	(nnir-search-engine): remove global variable.
	(nnir-run-hyrex): restore for now.
	(nnir-extra-parms,nnir-search-history): new variables.
	(gnus-group-make-nnir-group): use them.
	(nnir-group-server): remove in favor of gnus-group-server.
	(nnir-request-group): avoid searching twice.
	(nnir-sort-groups-by-server): new function.

2010-10-30  Julien Danjou  <julien@danjou.info>

	* gnus-group.el: Remove gnus-group-fetch-control.

	* gnus-start.el (gnus-find-new-newsgroups): Remove
	gnus-check-first-time-used.

	* gnus.el: Remove gnus-backup-default-subscribed-newsgroups.

2010-10-30  Knut Anders Hatlen  <kahatlen@gmail.com>  (tiny change)

	* nnimap.el (nnimap-update-info): Allow 'ticked and other flags to be
	set on groups that don't have \* permanentflags.

2010-10-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-span): Drop colorisation of regions since we don't
	control the background color.
	(shr-tag-img): Ignore very small web bug type images.
	(shr-put-image): Add help-echo alt texts to the images.
	(shr-tag-video): Show the video poster image.

2010-10-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-depth): New variable.
	(shr-tag-table-1): Only insert the images after the top-level table.

	* nnimap.el (nnimap-split-incoming-mail): Fix typo.

	* gnus-util.el (gnus-list-memq-of-list): New function.
